/*
 * Copyright (c) 2023 - Restate Software, Inc., Restate GmbH
 *
 * This file is part of the Restate SDK for Node.js/TypeScript,
 * which is released under the MIT license.
 *
 * You can find a copy of the license in file LICENSE in the root
 * directory of this repository or package, or at
 * https://github.com/restatedev/sdk-typescript/blob/main/LICENSE
 */

syntax = "proto3";

package test;

import "dev/restate/ext.proto";
import "google/protobuf/empty.proto";

service TestGreeter {
	option (dev.restate.ext.service_type) = KEYED;

	rpc Greet(TestRequest) returns (TestResponse) {};
}

message TestRequest {
	string name = 1 [(dev.restate.ext.field) = KEY];
}

message TestResponse {
	string greeting = 1;
}

message TestEmpty {
	google.protobuf.Empty  greeting = 1;
}

